Alignment fixes

--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -83,6 +83,7 @@
   padding: 64px 0 48px;
   border-bottom: 1px solid $border-l;
   margin-bottom: 48px;
+  align-items: center;
 
   &__eyebrow {
     font-size: $text-xs;
@@ -101,6 +102,7 @@
 
   &__subtitle {
     font-size: $text-lg;
+    font-style: italic;
     color: rgba($inchiostro, 0.55);
     max-width: 560px;
     margin: 0;
